Disabled xinput2 until edge cases can be fixed.

Forces all input devices to use xinput1, the previous path,
until all the kinks are worked out with the new xinput2 path.

BUG=616308

Review-Url: https://codereview.chromium.org/2108283002
Cr-Commit-Position: refs/heads/master@{#402966}

Former-commit-id: f7e731e7822967ab2d22530ea8d8487cf623ae3b